--- a/appsettings.json
+++ b/appsettings.json
@@ -2,12 +2,13 @@
   "ConnectionStrings": {
     "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:worldtripsapp.database.windows.net,1433;Initial Catalog=wordtripapp;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
   },
-  "Logging": {  
+  "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "PRICING_API_URL": "https://localhost:7024",
   "AllowedHosts": "*"
 }
