add AKS pipeline

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy .NET Microservice to Azure Container Apps
+name: Build and Deploy .NET Microservice to Azure Kubernetes Service
 
 on:
   push:
@@ -48,10 +48,18 @@ jobs:
             --image $IMAGE_NAME:$IMAGE_TAG \
             .
 
-      - name: Deploy to Azure Container Apps
+      - name: Get AKS Credentials
+        run: |
+          az aks get-credentials \
+            --resource-group $RESOURCE_GROUP \
+            --name $AKS_CLUSTER \
+            --overwrite-existing
+
+      - name: Update image tag in Kubernetes manifests
         run: |
           IMAGE_TAG=$(echo $GITHUB_SHA | cut -c1-7)
-          az containerapp update \
-            --name $CONTAINER_APP_NAME \
-            --resource-group $RESOURCE_GROUP \
-            --image $ACR_NAME.azurecr.io/$IMAGE_NAME:$IMAGE_TAG
+          sed -i "s|IMAGE_TAG_PLACEHOLDER|$IMAGE_TAG|g" $K8S_MANIFEST_PATH/deployment.yaml
+
+      - name: Deploy to AKS
+        run: |
+          kubectl apply -f $K8S_MANIFEST_PATH
