--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,6 +11,8 @@ env:
   CONTAINER_APP_NAME: worldtrippricing
   RESOURCE_GROUP: worldtrip-rg
   AZURE_REGION: eastus
+  AKS_CLUSTER: worldtrip-kube-cluster
+  K8S_MANIFEST_PATH: k8s
 
 jobs:
   build-and-deploy:
